--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -8,3 +8,4 @@
     st = status
     br = branch
     hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+    last = log -1 HEAD
