--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -9,3 +9,4 @@
     br = branch
     hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
     last = log -1 HEAD
+    stashpush = ! git stash && git push && git stash pop
