--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -10,3 +10,9 @@
     hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
     last = log -1 HEAD
     stashpush = ! git stash && git push && git stash pop
+
+[url "git@github.com:"]
+    pushInsteadOf = https://github.com/
+
+[url "git@bitbucket.org:johannesmvp/"]
+    pushInsteadOf = https://johannesmvp@bitbucket.org/
