--- a/files/gpg.conf
+++ b/files/gpg.conf
@@ -11,7 +11,7 @@
 # The default key to sign with. If this option is not used, the default key is
 # the first key found in the secret keyring
 
-default-key 0x0FB99FB3ADA8673B27D3F29953665A0480ABE8A7
+#default-key 
 
 
 #-----------------------------
