--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -10,6 +10,9 @@
 [url "git@github.com:"]
     pushInsteadOf = https://github.com/
 
+[url "git@gist.github.com:"]
+    pushInsteadOf = https://gist.github.com/
+
 [url "git@bitbucket.org:johannesmvp/"]
     pushInsteadOf = https://johannesmvp@bitbucket.org/
 
