Changed default keyserver

--- a/gpg/gpg.conf
+++ b/gpg/gpg.conf
@@ -46,7 +46,8 @@ use-agent
 # keyserver
 #-----------------------------
 
-keyserver hkp://pool.sks-keyservers.net
+#keyserver hkp://pool.sks-keyservers.net
+keyserver pgp.surfnet.nl
 
 # This is the server that --recv-keys, --send-keys, and --search-keys will
 # communicate with to receive keys from, send keys to, and search for keys on
